// Copyright 2022 Sogang University
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// The messages and services in this file describe the definitions for
// communicating with the scheduler of Chronica.

syntax = "proto3";

package scheduler;

import "google/protobuf/empty.proto";

option go_package = "github.com/9rum/chronica/scheduler";

service Scheduler {
  rpc Init(Arguments) returns (google.protobuf.Empty) {}
  rpc Bcast(Feedback) returns (Indices) {}
  rpc Reset(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Finalize(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

enum Schedule {
  SIZED = 0;
  STATIC = 1;
  DYNAMIC = 2;
}

message Arguments {
  int64 world_size = 1;
  int64 batch_size = 2;
  repeated int64 sizes = 3;
  optional bool partition = 4;
  optional int64 partition_size = 5;
  optional Schedule type = 6;
}

message Feedback {
  int64 rank = 1;
  optional double coefficient = 2;
  optional double intercept = 3;
}

message Indices {
  repeated int64 indices = 1;
}
